Fix sonar qube